--- a/src/main/webapp/adduser.html
+++ b/src/main/webapp/adduser.html
@@ -4,48 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <style>
-    	body {
-    		font-family: sans-serif;
-    		background-color:  #ffffff;
-            background-image: url(./Background.jpg);
-            background-repeat: no-repeat;
-            background-size: cover;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-        }
-    	form {
-    		width: 30%;
-    		height: 100vh;
-    		display: flex;
-    		flex-direction: column;
-    		justify-content: center;
-    	}
-    	input {
-    		margin: 10px 0;
-    		padding: 10px 15px;
-    		border-radius: 10px;
-    		border: none;
-    	}
-    	button {
-    	    margin: 30px 130px;
-    		width: 30%;
-    		padding: 10px 15px;
-    		border-radius: 10px;
-    		border: none;
-    	}
-    	button:hover {
-    		background-color: #a9acb0;
-    	}
-    	label {
-    		padding-left: 10px;
-            color: #ffffff;
-            font-weight: bold;
-    	}
-    </style>
-
+    <link href="style2.css" rel="stylesheet" type="text/css"/>
     <title>Add user test app</title>
 </head>
 
@@ -55,7 +14,8 @@
     <input type="text" name="name" placeholder="Enter your name">
     <label>Age</label>
     <input type="number" name="age" placeholder="Enter your age">
-    <button type="submit">Submit</button>
+    <button type="submit"><strong>Submit</strong></button>
+    <a target="_self" rel="noopener noreferrer" href="/Lesson_26_mariiapasichna">Back to homepage</a>
 </form>
 </body>
 </html>
