--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,38 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <style>
-    body {
-  background-color: #000000;
-  background-image: url(./Background.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  box-sizing: border-box;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-        }
-    div {
-  align-items: center;
-  width: 40%;
-  height: 40px;
-  padding: 10px 15px;
-  border-radius: 10px;
-  border: none;
-  background-color: #fff;
-  text-align: center;
-  margin-top: 50px;
-  box-sizing: border-box;
-       }
-    </style>
+    <link href="style1.css" rel="stylesheet" type="text/css"/>
     <title>Add user test app</title>
 </head>
 
 <body>
-<div><a href="/Lesson_26_mariiapasichna/adduser.html" target="_blank">Add new user</a></div>
-<div><a href="/Lesson_26_mariiapasichna/api" target="_blank">List all users</a></div>
+<div><a href="/Lesson_26_mariiapasichna/adduser.html" target="_self"><strong>Add new user</strong></a></div>
+<div><a href="/Lesson_26_mariiapasichna/api" target="_self"><strong>List all users</strong></a></div>
 </body>
 </html>
